# mini_mock

./: LICENSE  README.md  mini_mock.hpp
example/: CMakeLists.txt  README.md  mock_the_lib.hpp  my_project.cpp  my_project.hpp  test_my_project.cpp  test_my_project_init.cpp  test_my_project_work.cpp  the_lib.hpp
